{{$NEXT}}

0.11      2013-07-25 12:16:37 Europe/Minsk
    The build was adopted to travis-ci
    Persists application state (statuses with levels) between invocations
    Added Weather watcher
    [fix] Build correctly on perl v5.12

0.10      2013-07-08 01:05:47 Europe/Minsk
    Use Dist::Zilla's @git plugins bundle

0.09      2013-07-08 00:49:44 Europe/Minsk
    Separation Gtk frontend from main engine

0.08      2013-06-27 23:44:24 Europe/Minsk
  [Improvements]
      - Moved to using Dist::Zilla instead of old-school ExtUtils::MakeMaker
