@@ -111,7 +111,7 @@ sub _construct_watchers {
         my $watcher;
         eval {
             load_class($class);
-            $watcher = $class -> new( $config, %$watcher_config );
+            $watcher = $class->new( engine_config => $config, %$watcher_config );
             push @r, $watcher;
         };
         carp "Error creating watcher $class : $@" if $@;
