@@ -8,62 +8,30 @@ use AnyEvent::Socket;
 use App::PerlWatcher::Watcher;
 use Carp;
 use Devel::Comments;
+use Moo;
 
-use base qw(App::PerlWatcher::Watcher);
+has 'host'              => ( is => 'ro', required => 1 );
+has 'port'              => ( is => 'ro', required => 1 );
+has 'frequency'         => ( is => 'ro', default => sub{ 60; } );
+has 'timeout'           => ( is => 'lazy');
+has 'watcher_callback'  => ( is => 'lazy');
 
-sub new {
-    my ( $class, $engine_config, %config ) = @_;
-    my ( $host, $port, $frequency, $timeout ) 
-        = @config{ qw/ host port frequency timeout / };
-        
-    croak("host is not defined") unless defined ($host);
-    croak("port is not defined") unless defined ($port);
-    
-    $frequency  //= 60;
-    $timeout    //= $engine_config -> {defaults} -> {timeout} // 5;
+extends qw/App::PerlWatcher::Watcher/;
 
-    my $self = $class->SUPER::new($engine_config, %config);
-    my $extendent_self = {
-        _frequency => $frequency,
-        _host      => $host,
-        _port      => $port,
-    };
-    @$self{ keys %$extendent_self } = values %$extendent_self;
-    
-    $self -> _install_thresholds ($engine_config, \%config);
-    $self -> _install_watcher;
-    
-    return $self;
+sub _build_timeout {
+    $_[0]->config->{timeout} // $_[0]->engine_config->{defaults}->{timeout} // 5;
 }
 
-sub start {
+sub _build_watcher_callback {
     my $self = shift;
-    $self->{_callback} //= shift;
-    $self->{_w} = AnyEvent->timer(
-        after    => 0,
-        interval => $self->{_frequency},
-        cb       => sub {
-            $self->{_watcher}->()
-              if defined( $self->{_w} );
-        }
-    );
-}
-
-sub description {
-    my $self = shift;
-    return "Ping " . $self->{_host} . ":" . $self->{_port};
-}
-
-sub _install_watcher {
-    my $self = shift;
-    my ($host, $port ) = ( $self -> {_host}, $self -> {_port} ); 
+    my ($host, $port ) = ( $self->host, $self->port ); 
     $self -> {_watcher} = sub {
         tcp_connect $host, $port, sub {
             my $success = @_ != 0;
             # $! contains error
             # $host
             # $success
-            $self -> _interpret_result( $success, $self->{_callback});
+            $self -> _interpret_result( $success, $self->callback);
           }, sub {
 
             #connect timeout
@@ -73,5 +41,24 @@ sub _install_watcher {
           };
     };
 }
+
+sub start {
+    my ($self, $callback) = @_;
+    $self->callback($callback) if $callback;
+    $self->{_w} = AnyEvent->timer(
+        after    => 0,
+        interval => $self->frequency,
+        cb       => sub {
+            $self->watcher_callback->()
+              if defined( $self->{_w} );
+        }
+    );
+}
+
+sub description {
+    my $self = shift;
+    return "Ping " . $self->host . ":" . $self->port;
+}
+
 
 1;
