@@ -9,37 +9,37 @@ use App::PerlWatcher::EventItem;
 use Carp;
 use Devel::Comments;               
 use HTTP::Date;
+use Moo;
 use XML::XPath;
-
-use base qw(App::PerlWatcher::Watcher::HTTP);
 
 our $T_UNITS = {
     celcius => 'C°',
 };
-    
 
-sub new {
-    my ( $class, $engine_config, %config ) = @_;
-    
-    my $url_generator = $config{url_generator} // sub {
+has 'latitude'          => ( is => 'ro', required => 1);
+has 'longitude'         => ( is => 'ro', required => 1);
+has 'data'              => ( is => 'rw', default => sub{ {}; } );
+has 'url_generator'     => ( is => 'lazy');
+has 'url'               => ( is => 'lazy');
+
+extends qw/App::PerlWatcher::Watcher::HTTP/;
+
+sub _build_url_generator {
+    return sub {
         my ($lat, $lon) = @_;
         return "http://api.yr.no/weatherapi/locationforecast/1.8/?lat=$lat;lon=$lon";
     };
-    
-    croak "latitude is not defined" unless $config{latitude};
-    croak "longitude is not defined" unless $config{longitude};
-    
-    $config{url      } = $url_generator->($config{latitude}, $config{longitude});
-    $config{processor} = \&_process_reply;
-    
-    my $self = $class->SUPER::new($engine_config, %config);
-    return $self;
+}
+
+sub _build_url {
+    my $self = shift;
+    return $self->url_generator->($self->latitude, $self->longitude);
 }
 
 sub description {
     my $self = shift;
     my $desc = "Weather ";
-    my %data = %{ $self->{_data} // {} }; 
+    my %data = %{ $self->data // {} }; 
     if ( %data ) {
         $desc .= join(q{, } , 
             map { $_ . ": " . $data{$_} }
@@ -49,7 +49,7 @@ sub description {
     return $desc;
 }
 
-sub _process_reply {
+sub process_http_response {
     my ($self, $content, $headers) = @_;
     my $xp = XML::XPath->new(xml => $content);
     my $t_node = $xp->find('//time[1]/location/temperature');
@@ -57,9 +57,9 @@ sub _process_reply {
         my $t_item = $t_node->shift;
         my $value = $t_item->find('string(./@value)');
         my $unit = $t_item->find('string(./@unit)');
-        $self->{_data}{t} = sprintf("%s%s", $value, $T_UNITS->{$unit});
+        $self->data->{t} = sprintf("%s%s", $value, $T_UNITS->{$unit});
     }
-    $self->_interpret_result(1, $self -> {_callback});
+    $self->_interpret_result(1, $self->callback);
 }
 
 sub _invoke_callback {
