@@ -137,9 +137,9 @@ use utf8;
         {
             class => 'App::PerlWatcher::Watcher::FileTail',
             config => {
-                file    =>  '/var/log/messages',
-                lines   =>  10,
-                filter  => sub { $_ !~ /\scron/ },
+                file            =>  '/var/log/messages',
+                lines_number    =>  10,
+                filter          => sub { $_ !~ /\scron/ },
             },
         },
         
