@@ -12,24 +12,20 @@ use App::PerlWatcher::Watcher;
 
 {
     package Test::PerlWatcher::TestWatcher;
-    use base qw/App::PerlWatcher::Watcher/;
-    sub new {
-        my ( $class, $engine_config, %config ) = @_;
-        my $self = $class->SUPER::new($engine_config, %config);
-        $self -> _install_thresholds($engine_config, \%config);
-        return $self;
-    }
+    use Moo;
+    extends qw/App::PerlWatcher::Watcher/;
     sub description { shift;  }
 }
 my %engine_config;
-my %watcher_config = (a=>'b', c=>1, e=>{d=>5});
-my $w1 = Test::PerlWatcher::TestWatcher->new( \%engine_config, %watcher_config); 
-my $w1_1 = Test::PerlWatcher::TestWatcher->new( \%engine_config, %watcher_config); 
+my %watcher_init = (a=>'b', c=>1, e=>{d=>5}, engine_config => \%engine_config);
+my $w1 = Test::PerlWatcher::TestWatcher->new(%watcher_init); 
+my $w1_1 = Test::PerlWatcher::TestWatcher->new(%watcher_init);
 
 is $w1->unique_id, $w1_1->unique_id, "different watcher instances have the same id with the same configs";
+is "$w1", "$w1_1", "different watcher instances have the same id with the same configs (string overloaded version)";
 
-$watcher_config{c} = 2;
-my $w2 = Test::PerlWatcher::TestWatcher->new( \%engine_config, %watcher_config);
+$watcher_init{c} = 2;
+my $w2 = Test::PerlWatcher::TestWatcher->new(%watcher_init);
 ok !($w1->unique_id eq $w2->unique_id), "different watcher instances have the different configs don't have the same ids";
 
 done_testing();
