@@ -1,4 +1,6 @@
 {{$NEXT}}
+    [config change] FileTail: lines -> lines_number
+    [config change] Rss: _items_count-> items_number
 
 0.11      2013-07-25 12:16:37 Europe/Minsk
     The build was adopted to travis-ci
